--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mint-ui": "^2.2.13",
     "vue": "^2.5.17",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-router": "^3.0.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
